# LexMind

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: LexMind_Backend_API_Reference.docx  LexMind_Blueprint_v2.docx  LexMind_Ingestion_Pipeline_Detailed_Reference.docx  LexMind_Ingestion_Pipeline_Reference.docx  LexMind_Phase2_Action_Plan.docx  LexMind_Phase2_Technical_Reference.docx  LexMind_README.docx  prompt.Rmd
frontend/: package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/documents/: page.tsx
frontend/app/query/: page.tsx
frontend/app/research/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: ChatMessage.tsx  Sidebar.tsx
frontend/contexts/: UploadContext.tsx
frontend/lib/: api.ts
src/: config.py  llm_client.py
src/agents/: critic_agent.py  orchestrator.py  reasoning_agent.py  retrieval_agent.py
src/api/: main.py  schemas.py
src/api/routes/: documents.py  ingest.py  query.py  sessions.py
src/db/: database.py  models.py
src/graph/: graph.py  state.py
src/ingestion/: chunker.py  embedder.py  ingestion_pipeline.py  number_utils.py  parser.py  title_extractor.py  vector_store.py
tests/agents/: test_critic_agent.py  test_graph.py  test_orchestrator.py  test_reasoning_agent.py  test_state.py
tests/ingestion/: conftest.py  test_chunker.py  test_embedder.py  test_llm.py  test_parser.py  test_pipeline.py  test_vector_store.py
